[package]
name = "breakpad-parser-wasm"
version = "1.0.0"
authors = ["Fedor Indutny <238531+indutny@users.noreply.github.com>"]
edition = "2021"
description = "WASM parser for breakpad symbol format"
repository = "https://github.com/indutny/breakpad-parser-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
